--- a/fml_04.ipynb
+++ b/fml_04.ipynb
@@ -5649,6 +5649,222 @@
         "    * **Describe the insight you got from the plots with a few sentences in a Markdown cell below the plot**\n",
         "        * ❌ Plot interpretation figured in real-time during task check is not allowed! ❌"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "76466004"
+      },
+      "source": [
+        "X_stand_values = X_stand.values\n",
+        "\n",
+        "clustering_scores_stand = []\n",
+        "for k in range(2, 11):\n",
+        "    clustering_stand = sklearn.cluster.KMeans(n_clusters=k, random_state=13, n_init=10).fit(X_stand_values)\n",
+        "    clustering_scores_stand.append({\n",
+        "        'k': k,\n",
+        "        'sse': clustering_stand.inertia_,\n",
+        "        'silhouette': sklearn.metrics.silhouette_score(X_stand_values, clustering_stand.labels_)\n",
+        "    })\n",
+        "df_clustering_scores_stand = pd.DataFrame.from_dict(clustering_scores_stand, orient='columns')\n",
+        "df_clustering_scores_stand = df_clustering_scores_stand.set_index('k')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1a4451a1"
+      },
+      "source": [
+        "df_clustering_scores_stand"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1a578eb3"
+      },
+      "source": [
+        "Let's plot the SSE and Silhouette scores for the standardized data."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "86075532"
+      },
+      "source": [
+        "sns.lineplot(data = df_clustering_scores_stand, y='sse', x='k').set_title('SSE for KMeans on Standardized Data')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cde22461"
+      },
+      "source": [
+        "sns.lineplot(data = df_clustering_scores_stand, y='silhouette', x='k').set_title('Silhouette Score for KMeans on Standardized Data')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "87bd6155"
+      },
+      "source": [
+        "Based on the plots, what is the probable number of clusters in the standardized data?\n",
+        "\n",
+        "After analyzing the SSE and Silhouette plots, choose the number of clusters you think is most appropriate.\n",
+        "\n",
+        "Now, let's apply KMeans with the chosen number of clusters to the standardized data and explore the characteristics of each cluster."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "19e675b7"
+      },
+      "source": [
+        "# Replace 'n_clusters=4' with the number of clusters you chose\n",
+        "kmeans_stand = sklearn.cluster.KMeans(n_clusters=4, random_state=13, n_init=10).fit(X_stand_values)\n",
+        "X_stand['cluster_id_stand'] = kmeans_stand.labels_"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "33df4fe5"
+      },
+      "source": [
+        "How big are the clusters in the standardized data?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cc85922f"
+      },
+      "source": [
+        "X_stand['cluster_id_stand'].value_counts()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1dfba4a1"
+      },
+      "source": [
+        "Let's visualize the attributes of the clusters in the standardized data."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "72bca72f"
+      },
+      "source": [
+        "sns.boxplot(data=X_stand, x='cluster_id_stand', y='Fare').set_title('Fare Distribution per Cluster (Standardized)')\n",
+        "plt.yscale('log')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "abede65c"
+      },
+      "source": [
+        "Describe the insight you got from the plot above."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1dda40af"
+      },
+      "source": [
+        "sns.boxplot(data=X_stand, x='cluster_id_stand', y='Age').set_title('Age Distribution per Cluster (Standardized)')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "751a78df"
+      },
+      "source": [
+        "Describe the insight you got from the plot above."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2823208c"
+      },
+      "source": [
+        "sns.countplot(data=X_stand, x='cluster_id_stand', hue='Survived').set_title('Survival Rate per Cluster (Standardized)')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "893eb535"
+      },
+      "source": [
+        "Describe the insight you got from the plot above."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3aca8886"
+      },
+      "source": [
+        "sns.countplot(data=X_stand, x='cluster_id_stand', hue='Pclass').set_title('Passenger Class Distribution per Cluster (Standardized)')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "df55e796"
+      },
+      "source": [
+        "Describe the insight you got from the plot above."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8d4f418b"
+      },
+      "source": [
+        "Now, write a textual description of the clusters found in the standardized data based on the plots above.\n",
+        "\n",
+        "### Cluster 1 (Standardized) - ...\n",
+        "### Cluster 2 (Standardized) - ...\n",
+        "### Cluster 3 (Standardized) - ...\n",
+        "### Cluster 4 (Standardized) - ...\n",
+        "\n",
+        "Finally, compare the clusters found with the original data and the standardized data. Which preprocessing method seems to yield more distinct or meaningful clusters based on your analysis?"
+      ]
     }
   ],
   "metadata": {
